[gd_scene load_steps=10 format=3 uid="uid://d1l4jotm0v3d2"]

[ext_resource type="Script" path="res://Plataform Obstacles/Scene/bonce_platform.gd" id="1_vivkc"]
[ext_resource type="ArrayMesh" uid="uid://d0s7m65q8y1w3" path="res://addons/kaykit_prototype_bits/Assets/obj/table_medium.obj" id="2_skr0o"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xsdrr"]
size = Vector3(1.58354, 1, 1.32531)

[sub_resource type="Animation" id="Animation_ji5yy"]
resource_name = "BounceDown"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.683152, 0), Vector3(0, 0.3, 0)]
}

[sub_resource type="Animation" id="Animation_tihgh"]
resource_name = "BounceUP"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 0.5, 1), Vector3(1, 1.2, 1), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.3, 0), Vector3(0, 0.8, 0), Vector3(0, 0.683152, 0)]
}

[sub_resource type="Animation" id="Animation_eqlvw"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dmn11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.683152, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ujby"]
_data = {
"BounceDown": SubResource("Animation_ji5yy"),
"BounceUP": SubResource("Animation_tihgh"),
"Idle": SubResource("Animation_eqlvw"),
"RESET": SubResource("Animation_dmn11")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_mfigf"]
size = Vector3(1.97855, 0.189352, 1.47307)

[node name="BouncePlatform" type="RigidBody3D" node_paths=PackedStringArray("animation")]
mass = 999999.0
gravity_scale = 0.0
continuous_cd = true
max_contacts_reported = 10
contact_monitor = true
lock_rotation = true
freeze_mode = 1
script = ExtResource("1_vivkc")
animation = NodePath("AnimationPlayer")
bounceForce = 20.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_skr0o")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 15
priority = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00963, 0)
shape = SubResource("BoxShape3D_xsdrr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_7ujby")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.683152, 0)
shape = SubResource("BoxShape3D_mfigf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
